--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -56,5 +56,11 @@
 
 
 <script src="/javascripts/main.js"></script>
+<script>
+window.replainSettings = { id: '2eeb03a8-8921-4460-bf18-373a941226a3' };
+(function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+})('https://widget.replain.cc/dist/client.js');
+</script>
 </body>
 </html>
