--- a/views/pages/contact-us.ejs
+++ b/views/pages/contact-us.ejs
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-12 m-auto">
-      <h1 class="mt-4 mb-4 text-center">Contact Us</h1>
+      <h1 class="mt-4 mb-4 text-center">Связаться с нами</h1>
       <!-- Flash message -->
       <% if (successMsg != null && successMsg) { %>
         <div id="success" class="alert alert-success">
@@ -14,32 +14,32 @@
     <div class="col-lg-8 col-md-12 text-justify m-auto">
       <!-- Introduction -->
     <div class="mt-4 mb-4">
-      <p>You are always welcome to contact us at anytime! Feel free to email us or phone us using our contact details below<br />
-        You can also visit us or call us at anytime during our working hours from <i>Sunday to Thursday: 9AM to 12PM.</i> <br />
-        We reply to our emails even during the weekends. So please do not hesitate to contact us.
+      <p>Вы всегда можете связаться с нами в любое время! Не стесняйтесь писать нам по электронной почте или по телефону, используя контактную информацию, указанную ниже.<br />
+       Вы также можете посетить нас или позвонить нам в любое время в рабочее время с <i> воскресенья по четверг: с 9:00 до 18:00. </i> <br />
+       Мы отвечаем на наши электронные письма даже в выходные дни. Пожалуйста, не стесняйтесь обращаться к нам.
       </p>
     </div>
       <!-- Email contacts -->
       <div class="mt-4 mb-4">
         <p>
-          <h6><i>Contact us by email:</i></h6>
+          <h6><i>Свяжитесь с нами по электронной почте:</i></h6>
         </p>
         <p>
-          For general inquiries:
-          <a href="mailto:general@email.com">
+         По общим вопросам:
+          <a href="mailto:edison@email.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
-            <u>general@email.com</u>
+            <u>edsion@email.com</u>
           </a>
         </p>
         <p>
-          For orders problems:
+          Для проблем с заказами:
           <a href="mailto:orders@email.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
             <u>orders@email.com</u>
           </a>
         </p>
         <p>
-          For technical support:
+         Для технической поддержки:
           <a href="mailto:support@email.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
             <u>support@email.com</u>
@@ -49,24 +49,24 @@
       <!-- Phone contacts -->
       <div class="mt-4 mb-4">
         <p>
-          <h6><i>Contact us by phone:</i></h6>
+          <h6><i>Свяжитесь с нами по телефону:</i></h6>
         </p>
         <p>
-          Call center phone 1:
+         Телефон колл-центра 1:
           <a href="tel:555-555-5555">
             <i class="fa fa-phone" aria-hidden="true"></i>
             555-555-5555
            </a>
         </p>
         <p>
-          Call center phone 2:
+         Телефон колл-центра 2:
           <a href="tel:555-555-5555">
             <i class="fa fa-phone" aria-hidden="true"></i>
             555-555-5555
            </a>
         </p>
         <p>
-          Whatsapp phone:
+         Телефон telegram:
           <a href="tel:555-555-5555">
             <i class="fa fa-phone" aria-hidden="true"></i>
             555-555-5555
@@ -78,7 +78,7 @@
     <!-- Contact us form -->
     <div class="col-lg-8 col-md-12 m-auto">
       <div class="mt-5 mb-4">
-        <h2>Contact Us Form</h2>
+        <h2>Форма для связи с нами</h2>
         <!-- Error flash message -->
         <% if(errorMsg!=null && errorMsg.length>0) {%>
           <div id="flash-msg" class="alert alert-danger">
