--- a/views/pages/shipping-policy.ejs
+++ b/views/pages/shipping-policy.ejs
@@ -3,20 +3,20 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-12 m-auto text-justify">
-      <h1 class="mt-4 mb-5 text-center">Shipping Policy</h1>
+      <h1 class="mt-4 mb-5 text-center">Политика доставки</h1>
       <p>
-        On this page you will find information about our shipping duration and
-        costs.
+        На этой странице вы найдете информацию о сроках доставки и
+         расходы.
       </p>
 
-      <h4>Order Processing Duration</h4>
+      <h4>Срок обработки заказа</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nam
         voluptatem adipisci sed amet ipsa quod reiciendis eos. Magnam ad
         sapiente aut a libero aliquam veritatis incidunt molestiae tempora?
       </p>
 
-      <h4>Order Delivery</h4>
+      <h4>Доставка заказа</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum laborum
         dolor, totam quidem expedita impedit sequi natus molestias quae
@@ -24,7 +24,7 @@
         suscipit.
       </p>
 
-      <h4>Shipping Rates</h4>
+      <h4>Тарифы на доставку</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita libero
         perspiciatis atque corrupti amet dignissimos reprehenderit excepturi aut
@@ -32,7 +32,7 @@
         omnis debitis! Beatae.
       </p>
 
-      <h4>Returning Products</h4>
+      <h4>Возврат товаров</h4>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, dicta.
         Consequatur praesentium esse aut minus ullam exercitationem nostrum!
@@ -40,11 +40,11 @@
         corrupti voluptatibus quos.
       </p>
 
-      <h4>Do you have questions?</h4>
+      <h4>у вас есть вопросы?</h4>
       <p>
-        Please do not hesitate to
-        <a href="/pages/contact-us"><u>contact us</u></a> through our emails or
-        phone numbers
+       Пожалуйста, не стесняйтесь
+        <a href="/pages/contact-us"><u>связаться с нами</u></a> через нашу электронную почту или
+         телефонные номера
       </p>
     </div>
   </div>
