--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,25 +4,25 @@
 <section id="contact" class="mt-5">
     <div class="row">
         <div class="col-md-4 col-sm-12 col-xs-12 white-links">
-            <p class="footer-title">About Us</p>
+            <p class="footer-title">О нас</p>
             <ul>
                 <li>
-                    <a href="/pages/about-us">About Our Store</a>
+                    <a href="/pages/about-us">О нашем магазине</a>
                 </li>
                 <li>
-                    <a href="/pages/contact-us">Contact Us</a>
+                    <a href="/pages/contact-us">Связаться с нами</a>
                 </li>
                 <li>
-                    <a href="/pages/shipping-policy">Shipping Policy</a>
+                    <a href="/pages/shipping-policy">Политика доставки</a>
                 </li>
                 <li>
-                    <a href="/pages/careers">Careers</a>
+                    <a href="/pages/careers">Карьера</a>
                 </li>
             </ul>  
         </div>
 
     <div class="col-md-6 col-sm-12 col-xs-12 white-links mb-2">
-        <p class="footer-title">Follow Us</p>
+        <p class="footer-title">Подписывайтесь на нас</p>
         <a href="https://facebook.com/" target="_blank">
             <i class="fa fa-facebook-square" aria-hidden="true"></i>
             Facebook
@@ -46,7 +46,7 @@
   <section class="bottom-footer">
     <div class="row">
     <div class="col-12 mr-auto">
-      © BestBags 2020 **This is just a fake ecommerce website. All the products and contact details given are not real.
+     © EDISON 2021
     </div>
    </div>
   </section>
@@ -56,11 +56,5 @@
 
 
 <script src="/javascripts/main.js"></script>
-<script>
-window.replainSettings = { id: '2eeb03a8-8921-4460-bf18-373a941226a3' };
-(function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
-var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
-})('https://widget.replain.cc/dist/client.js');
-</script>
 </body>
 </html>
