--- a/views/pages/about-us.ejs
+++ b/views/pages/about-us.ejs
@@ -3,8 +3,8 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-12 m-auto text-justify">
-      <h1 class="mt-4 mb-5 text-center">About Us</h1>
-      <h3>Welcome to our store</h3>
+      <h1 class="mt-4 mb-5 text-center">О нас</h1>
+      <h3>Добро пожаловать в наш магазин</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nam
         voluptatem adipisci sed amet ipsa quod reiciendis eos. Magnam ad
@@ -18,7 +18,7 @@
       </p>
     </div>
     <div class="col-lg-8 col-md-12 mx-auto mt-3 mb-3">
-      <h3>Our location on map</h3>
+      <h3>Наше расположение на карте</h3>
       <div class="mt-4" id="map" style="width: 100%; height: 400px;"></div>
     </div>
   </div>
