--- a/views/partials/categories-navbar.ejs
+++ b/views/partials/categories-navbar.ejs
@@ -18,7 +18,7 @@
           class="nav-item"
         <%} %> 
       >
-        <a class="nav-link" href="/products/">All</a>
+        <a class="nav-link" href="/products/">Все продукты</a>
       </li>
 
       <% if (categories) { %>
