--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <% if (pageName) { %>
-    <title>BestBags | <%= pageName %></title>
+    <title>Edison| <%= pageName %></title>
     <%} else {%>
-    <title>Shopping Cart</title>
+    <title>Корзина покупателя</title>
     <% } %>
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
@@ -58,7 +58,7 @@
             <input
               class="search-input"
               type="search"
-              placeholder="Search"
+              placeholder="Поиск"
               name="search"
             />
           </form>
@@ -68,7 +68,7 @@
       <div class="col-md-4 col-sm-12 col-xs-12 logo-container">
         <a href="/">
           <img class="logo-img img-fluid" src="/images/shop-icon.png" alt="logo" />
-          <h4 class="logo-title"></h4>
+          <h4 class="logo-title">Edison</h4>
         </a>
       </div>
 
@@ -95,20 +95,20 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <i class="fas fa-user"></i> Welcome <%=currentUser.username%>
+              <i class="fas fa-user"></i> <%=currentUser.username%>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/user/profile">User Account</a>
+              <a class="dropdown-item" href="/user/profile">Учетная запись пользователя</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/user/logout">Logout</a>
+              <a class="dropdown-item" href="/user/logout">Выйти</a>
             </div>
           </li>
           <% } else {%>
           <li>
-            <a href="/user/signup"> Sign Up</a>
+            <a href="/user/signup"> Зарегистрироваться</a>
           </li>
           <li>
-            <a href="/user/signin"> Sign In</a>
+            <a href="/user/signin"> Войти</a>
           </li>
           <% }%>
         </ul>
