--- a/views/shop/product.ejs
+++ b/views/shop/product.ejs
@@ -34,21 +34,23 @@
       <h2><%=product.title%></h2>
       <hr />
       <p class="price">USD $<%=product.price%></p>
-      <p class="lead"> Description: 
+      <p class="lead"> Описание:
+
         <p><%=product.description%></p>
+        
       </p>
       
-      <p><strong>Category:</strong> <%=product.category.title%></p>
-      <p><strong>Brand: </strong><%=product.manufacturer%></p>
-      <p><strong>Product code:</strong> <%=product.productCode%></p>
-      <p><strong>Date added to the store:</strong> <%= moment(product.createdAt).format( 'MMMM Do YYYY')%></p>
+      <p><strong>Категория:</strong> <%=product.category.title%></p>
+      <p><strong>Марка: </strong><%=product.manufacturer%></p>
+      <p><strong>Код продукта:</strong> <%=product.productCode%></p>
+      <p><strong>Дата добавления в магазин:</strong> <%= moment(product.createdAt).format( 'MMMM Do YYYY')%></p>
       <% if(product.available) {%>
-      <p class="is-available text-center">In stock</p>
+      <p class="is-available text-center">В наличии</p>
       <a href="/add-to-cart/<%=product._id%>" class="btn btn-block btn-secondary mt-3 mb-3 button-style">
-        Add to Shopping Cart
+       Добавить в корзину
       </a>
       <% } else { %>
-      <p class="is-not-available text-center">Sold out</p>
+      <p class="is-not-available text-center">Распроданный</p>
       <%} %>
     </div>
   </div>
