--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -27,7 +27,7 @@
   <div class="row mt-4">
     <div class="col-md-8 m-auto">
       <% if (orders != null && orders.length > 0) { %>
-      <h3>My orders</h3>
+      <h3>Мои заказы</h3>
       <% orders.forEach( order => { %>
       <div class="card m-3">
         <div class="card-body">
@@ -35,7 +35,7 @@
             <ul class="list-group">
               <% order.cart.items.forEach( item => { %>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-                <%= item.title %> | <%= item.qty %> Units
+                <%= item.title %> | <%= item.qty %> Единицы
                 <span class="badge badge-info badge-pill"><%= item.price %></span>
               </li>
               <%}) %>
@@ -43,12 +43,12 @@
           </p>
         </div>
         <div class="card-footer">
-          <strong>Total Price: $<%= order.cart.totalCost %></strong>
+          <strong>Общая цена: $<%= order.cart.totalCost %></strong>
         </div>
       </div>
       <%}) %>
       <%} else { %>
-        <h3 class="text-center" >You have not made any orders yet</h3>
+        <h3 class="text-center" >Вы еще не сделали ни одного заказа</h3>
       <%} %>
     </div>
   </div>
