--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 m-auto">
-      <h1 class="mt-4 mb-4">Sign Up Page</h1>
+      <h1 class="mt-4 mb-4">Страница регистрации</h1>
       <% if(errorMsg != null && errorMsg.length>0) {%>
       <div id="flash-msg" class="alert alert-danger">
         <%=errorMsg %>
@@ -11,7 +11,7 @@
       <%}%>
       <form action="/user/signup" method="POST">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name">Имя</label>
           <input
             type="name"
             class="form-control"
@@ -21,11 +21,11 @@
           />
         </div>
         <div class="form-group">
-          <label for="email">Email address</label>
+          <label for="email">Адрес электронной почты</label>
           <input type="email" class="form-control" name="email" id="email" />
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">Пароль</label>
           <input
             type="password"
             class="form-control"
@@ -34,7 +34,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="password2">Verify Password</label>
+          <label for="password2">подтвердите пароль</label>
           <input
             type="password"
             class="form-control"
@@ -44,7 +44,7 @@
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <button type="submit" class="btn btn-primary button-style">
-          Sign Up
+        Зарегистрироваться
         </button>
       </form>
     </div>
